notebooks: get_outputs added

--- a/notebooks/08-spn_cwis_srl.ipynb
+++ b/notebooks/08-spn_cwis_srl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -81,9 +81,11 @@
        "      <th>CHUNK_START</th>\n",
        "      <th>CHUNK_FINISH</th>\n",
        "      <th>CHUNK_LEN</th>\n",
+       "      <th>CHUNK_CANDIDATE_ID</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>INDEX</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -107,6 +109,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -119,6 +122,7 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -131,6 +135,7 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -143,6 +148,7 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -155,6 +161,7 @@
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -167,6 +174,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -179,6 +187,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -191,6 +200,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -203,6 +213,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -215,6 +226,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -227,6 +239,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -239,6 +252,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -251,6 +265,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -263,6 +278,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -275,6 +291,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -287,6 +304,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -299,6 +317,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -311,6 +330,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -323,6 +343,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -335,6 +356,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -347,6 +369,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -359,6 +382,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -371,6 +395,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -383,6 +408,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -395,6 +421,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -407,6 +434,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -419,6 +447,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -431,6 +460,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -443,6 +473,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -455,6 +486,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -467,6 +499,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
@@ -479,6 +512,7 @@
        "      <td>5</td>\n",
        "      <td>32</td>\n",
        "      <td>27</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -491,6 +525,7 @@
        "      <td>32</td>\n",
        "      <td>33</td>\n",
        "      <td>1</td>\n",
+       "      <td>560</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -533,44 +568,44 @@
        "31     32  1  Fernando_Henrique_Cardoso    *)  A1         4            5   \n",
        "32     33  1                          .     *   *         5           32   \n",
        "\n",
-       "       CHUNK_FINISH  CHUNK_LEN  \n",
-       "INDEX                           \n",
-       "0                 1          1  \n",
-       "1                 4          3  \n",
-       "2                 4          3  \n",
-       "3                 4          3  \n",
-       "4                 5          1  \n",
-       "5                32         27  \n",
-       "6                32         27  \n",
-       "7                32         27  \n",
-       "8                32         27  \n",
-       "9                32         27  \n",
-       "10               32         27  \n",
-       "11               32         27  \n",
-       "12               32         27  \n",
-       "13               32         27  \n",
-       "14               32         27  \n",
-       "15               32         27  \n",
-       "16               32         27  \n",
-       "17               32         27  \n",
-       "18               32         27  \n",
-       "19               32         27  \n",
-       "20               32         27  \n",
-       "21               32         27  \n",
-       "22               32         27  \n",
-       "23               32         27  \n",
-       "24               32         27  \n",
-       "25               32         27  \n",
-       "26               32         27  \n",
-       "27               32         27  \n",
-       "28               32         27  \n",
-       "29               32         27  \n",
-       "30               32         27  \n",
-       "31               32         27  \n",
-       "32               33          1  "
+       "       CHUNK_FINISH  CHUNK_LEN  CHUNK_CANDIDATE_ID  \n",
+       "INDEX                                               \n",
+       "0                 1          1                   0  \n",
+       "1                 4          3                  35  \n",
+       "2                 4          3                  35  \n",
+       "3                 4          3                  35  \n",
+       "4                 5          1                 126  \n",
+       "5                32         27                 181  \n",
+       "6                32         27                 181  \n",
+       "7                32         27                 181  \n",
+       "8                32         27                 181  \n",
+       "9                32         27                 181  \n",
+       "10               32         27                 181  \n",
+       "11               32         27                 181  \n",
+       "12               32         27                 181  \n",
+       "13               32         27                 181  \n",
+       "14               32         27                 181  \n",
+       "15               32         27                 181  \n",
+       "16               32         27                 181  \n",
+       "17               32         27                 181  \n",
+       "18               32         27                 181  \n",
+       "19               32         27                 181  \n",
+       "20               32         27                 181  \n",
+       "21               32         27                 181  \n",
+       "22               32         27                 181  \n",
+       "23               32         27                 181  \n",
+       "24               32         27                 181  \n",
+       "25               32         27                 181  \n",
+       "26               32         27                 181  \n",
+       "27               32         27                 181  \n",
+       "28               32         27                 181  \n",
+       "29               32         27                 181  \n",
+       "30               32         27                 181  \n",
+       "31               32         27                 181  \n",
+       "32               33          1                 560  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +626,8 @@
     "    _df = pd.read_csv(col_f, index_col=0, encoding='utf-8')\n",
     "    dfgs = pd.concat((dfgs, _df), axis=1)\n",
     "\n",
-    "DISPLAY_COLUMNS = ['ID', 'P', 'FORM', 'ARG', 'T', 'CHUNK_ID', 'CHUNK_START', 'CHUNK_FINISH', 'CHUNK_LEN']            \n",
+    "DISPLAY_COLUMNS = ['ID', 'P', 'FORM', 'ARG', 'T', \n",
+    "                   'CHUNK_ID', 'CHUNK_START', 'CHUNK_FINISH', 'CHUNK_LEN', 'CHUNK_CANDIDATE_ID']            \n",
     "dfgs[DISPLAY_COLUMNS].head(33)    "
    ]
   },
@@ -610,39 +646,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# LOAD ENCODER\n",
-    "propbank_encoder = PropbankEncoder.recover(PROPBANK_GLO50_PATH)            "
+    "propbank_encoder = PropbankEncoder.recover(PROPBANK_GLO50_PATH)\n",
+    "db = propbank_encoder.db\n",
+    "lex2idx = propbank_encoder.lex2idx\n",
+    "idx2lex = propbank_encoder.idx2lex\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "attributes\t 43 \n",
+      "attributes\t 44 \n",
       " records\t 141730\n"
      ]
     }
    ],
    "source": [
     "print('attributes\\t',\n",
-    "       len(propbank_encoder.db),\n",
+    "       len(db),\n",
     "      '\\n',             \n",
     "      'records\\t',\n",
-    "       len(propbank_encoder.db['ARG'].keys()))"
+    "       len(db['ARG'].keys()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,20 +744,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "attributes\t 43 \n",
+      "attributes\t 44 \n",
       " records\t 123846\n"
      ]
     }
    ],
    "source": [
-    "traindb  = filter_type('train', propbank_encoder.db)\n",
+    "traindb  = filter_type('train', db)\n",
     "print('attributes\\t',\n",
     "       len(traindb),\n",
     "      '\\n',             \n",
@@ -728,14 +767,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "attributes\t 43 \n",
+      "attributes\t 44 \n",
       " records\t 123837\n"
      ]
     }
@@ -751,10 +790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_chunk_space(n):\n",
@@ -766,26 +803,94 @@
     "        for j in range(i,n,1):\n",
     "            start_list.append(i)\n",
     "            end_list.append(j+1)\n",
-    "    return  start_list, end_list"
+    "    return  start_list, end_list\n",
+    "\n",
+    "def get_outputs(db1, propid ,t2idx):\n",
+    "    ''' Generate outputs\n",
+    "    '''\n",
+    "#     df_sentence = df_data[df_data['sentence_id']==sentence_id]\n",
+    "#     sentence_chunks = df_sentence['chunk_candidate_id'].unique()\n",
+    "#     chunk_classes = df_sentence.groupby('chunk_candidate_id')[target].first().map(target_to_id).values\n",
+    "\n",
+    "#     n_classes = len(target_to_id)\n",
+    "#     output = sentence_chunks * n_classes + chunk_classes\n",
+    "#     return output.reshape((len(sentence_chunks),1)).astype(np.int32)\n",
+    "    propdb = db1[propid] # nested dict of columns and idx value\n",
+    "    propchunks_list = list(set(propdb['CHUNK_CANDIDATE_ID'].values()))\n",
+    "    chunksclasses_list = zip(propdb['CHUNK_CANDIDATE_ID'].values(), \n",
+    "                             propdb['T'].values())\n",
+    "    chunksclasses_list = list(set(chunksclasses_list))\n",
+    "    n_targets = len(t2idx)\n",
+    "#     outputs_ = propchunks_list * n_targets + n_targets\n",
+    "    outputs_ = propchunks_list * n_targets\n",
+    "    return outputs_\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "785 µs ± 20.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{0: 0,\n",
+       " 1: 1,\n",
+       " 2: 1,\n",
+       " 3: 1,\n",
+       " 4: 35,\n",
+       " 5: 2,\n",
+       " 6: 2,\n",
+       " 7: 2,\n",
+       " 8: 2,\n",
+       " 9: 2,\n",
+       " 10: 2,\n",
+       " 11: 2,\n",
+       " 12: 2,\n",
+       " 13: 2,\n",
+       " 14: 2,\n",
+       " 15: 2,\n",
+       " 16: 2,\n",
+       " 17: 2,\n",
+       " 18: 2,\n",
+       " 19: 2,\n",
+       " 20: 2,\n",
+       " 21: 2,\n",
+       " 22: 2,\n",
+       " 23: 2,\n",
+       " 24: 2,\n",
+       " 25: 2,\n",
+       " 26: 2,\n",
+       " 27: 2,\n",
+       " 28: 2,\n",
+       " 29: 2,\n",
+       " 30: 2,\n",
+       " 31: 2,\n",
+       " 32: 0}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "propid  = 1\n",
+    "propdb = traindb1[propid]\n",
+    "propdb['T']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "word, gpos, chunk_type = traindb1[1120]['FORM'].values(), traindb1[1120]['GPOS'].values(), traindb1[1120]['T'].values(), \n",
     "chunk_start, chunk_finish = generate_chunk_space(proplen_dict[1120])\n",
+    "y = get_outputs(traindb1, 1120, lex2idx['T'])\n",
     "# worst proposition 1120 size 92!"
    ]
   },
