notebooks: get_outputs added

--- a/notebooks/08-spn_cwis_srl.ipynb
+++ b/notebooks/08-spn_cwis_srl.ipynb
@@ -883,9 +883,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "774 µs ± 16.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "word, gpos, chunk_type = traindb1[1120]['FORM'].values(), traindb1[1120]['GPOS'].values(), traindb1[1120]['T'].values(), \n",
