notebooks: spn_cwis_srl training validations

--- a/notebooks/08-spn_cwis_srl.ipynb
+++ b/notebooks/08-spn_cwis_srl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import json\n",
-    "import tensorflow as tf\n",
     "from subprocess import Popen, PIPE, STDOUT\n",
     "import re\n",
     "from collections import defaultdict\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import tqdm\n",
     "from models import PropbankEncoder\n",
     "import config\n",
     "\n",
@@ -926,20 +928,37 @@
     "    finish_ = np.array(end_list).reshape(shape_)\n",
     "    return start_, finish_\n",
     "            \n",
+    "# Different code version - more advanced keep it for later\n",
+    "# def get_outputs(db1, t2idx, propid):\n",
+    "#     ''' Generate outputs\n",
+    "#     '''\n",
+    "#     propdb_ = db1[propid] # nested dict of columns and idx value\n",
+    "#     n_ = len(t2idx)\n",
+    "#     if 'OUTPUTS' not in propdb_: \n",
+    "#         np_tuple = (propdb_['CHUNK_CANDIDATE_ID'], \n",
+    "#                     propdb_['T'])\n",
+    "        \n",
+    "#         tmp_ = np.concatenate(np_tuple, axis=1)\n",
+    "#         tmp_ = np.unique(tmp_, axis=0)\n",
+    "#         chunk_id, chunk_t = np.split(tmp_, 2, axis=1)\n",
+    "#         propdb_['OUTPUTS'] = (chunk_id * n_ + chunk_t).reshape(len(chunk_id),)\n",
     "\n",
-    "def get_outputs(db1, t2idx, propid):\n",
+    "#     return propdb_['OUTPUTS']\n",
+    "def get_outputs(db1, t2idx, proplen_dict, propid):\n",
     "    ''' Generate outputs\n",
     "    '''\n",
     "    propdb_ = db1[propid] # nested dict of columns and idx value\n",
     "    n_ = len(t2idx)\n",
+    "    len_ = proplen_dict[propid]\n",
     "    if 'OUTPUTS' not in propdb_: \n",
-    "        np_tuple = (propdb_['CHUNK_CANDIDATE_ID'], \n",
-    "                    propdb_['T'])\n",
+    "#         np_tuple = (propdb_['CHUNK_CANDIDATE_ID'], \n",
+    "#                     propdb_['T'])\n",
     "        \n",
-    "        tmp_ = np.concatenate(np_tuple, axis=1)\n",
-    "        tmp_ = np.unique(tmp_, axis=0)\n",
-    "        chunk_id, chunk_t = np.split(tmp_, 2, axis=1)\n",
-    "        propdb_['OUTPUTS'] = (chunk_id * n_ + chunk_t).reshape(len(chunk_id),)\n",
+    "#         tmp_ = np.concatenate(np_tuple, axis=1)\n",
+    "#         tmp_ = np.unique(tmp_, axis=0)\n",
+    "#         chunk_id, chunk_t = np.split(tmp_, 2, axis=1)\n",
+    "#         propdb_['OUTPUTS'] = (chunk_id * n_ + chunk_t).reshape(len(chunk_id),)\n",
+    "        propdb_['OUTPUTS'] = propdb_['T'].reshape((len_,))\n",
     "\n",
     "    return propdb_['OUTPUTS']"
    ]
@@ -953,7 +972,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "887 ns ± 22.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "954 ns ± 31 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -961,7 +980,7 @@
     "%%timeit\n",
     "propid = 1119\n",
     "word, gpos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1, proplen_dict, propid)\n",
-    "y = get_outputs(prop_dict1, lex2idx['T'], propid)\n",
+    "y = get_outputs(prop_dict1, lex2idx['T'], proplen_dict, propid)\n",
     "# worst proposition 1120 size 92!"
    ]
   },
@@ -981,19 +1000,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 1), (1, 4), (32, 33), (4, 5), (5, 32)]\n"
+      "(33,)\n",
+      "[ 0  1  1  1 35  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2\n",
+      "  2  2  2  2  2  2  2  0]\n"
      ]
     }
    ],
    "source": [
     "propid = 1\n",
     "word, gpos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1, proplen_dict, propid)\n",
-    "y = get_outputs(prop_dict1, lex2idx['T'], propid)\n",
-    "\n",
-    "_start  = np.repeat(chunk_start, len(lex2idx['T']))\n",
-    "_finish = np.repeat(chunk_finish, len(lex2idx['T']))\n",
+    "y = get_outputs(prop_dict1, lex2idx['T'], proplen_dict, propid)\n",
+    "print(y.shape)\n",
+    "print(y)\n",
+    "# _start  = np.repeat(chunk_start, len(lex2idx['T']))\n",
+    "# _finish = np.repeat(chunk_finish, len(lex2idx['T']))\n",
     "# print([(_start[y_].flatten(), _finish[y_].flatten()) for y_ in y])\n",
-    "print(list(zip(_start[y].flatten(), _finish[y].flatten())))\n"
+    "# print(list(zip(_start[y].flatten(), _finish[y].flatten())))\n"
    ]
   },
   {
@@ -1085,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,34 +1118,42 @@
     "n_classes = len(lex2idx['T'])\n",
     "\n",
     "# índices das palavras\n",
-    "t_x_words = tf.placeholder(tf.int64, shape=(None,1))\n",
-    "t_x_pos = tf.placeholder(tf.int64, shape=(None,1))\n",
+    "t_x_words = tf.placeholder(tf.int64, shape=(None,1), name='word')\n",
+    "t_x_pos = tf.placeholder(tf.int64, shape=(None,1), name='gpos')\n",
     "# t_x_type = tf.placeholder(tf.int32, shape=(None,1))\n",
     "\n",
+    "W_shape = (embed_size + n_pos, n_classes)\n",
+    "b_shape = (1,n_classes)\n",
     "# geramos os paramteros do modelo\n",
     "with tf.variable_scope(\"model\"):\n",
     "    # parâmetros de embedding\n",
-    "    t_W_tok = tf.Variable(tf.random_normal((vocab_size, embed_size), 0, 0.01))\n",
+    "    t_W_tok = tf.Variable(tf.random_normal((vocab_size, embed_size), 0, 0.01, dtype=tf.float32), name='embeddings')\n",
     "    # parâmetros que computam o score a partir das features do intervalo\n",
-    "    t_W_interval = tf.Variable(np.zeros((embed_size + n_pos,n_classes)).astype(np.float32))\n",
-    "    t_b_interval = tf.Variable(np.zeros((1,n_classes)).astype(np.float32))\n",
+    "#     t_W_interval = tf.Variable(np.zeros((embed_size + n_pos, n_classes)).astype(np.float32))\n",
+    "    t_W_interval = tf.Variable(tf.zeros(W_shape, dtype=tf.float32), name='W')\n",
+    "\n",
+    "#     t_b_interval = tf.Variable(np.zeros((1,n_classes)).astype(np.float32))\n",
+    "# np.zeros((1,n_classes)).astype(np.float32)\n",
+    "    t_b_interval = tf.Variable(tf.zeros(b_shape, dtype=tf.float32), name='b')\n",
+    "#     np.zeros((1,n_classes)).astype(np.float32)\n",
+    "#     t_b_interval = tf.Variable()\n",
     "\n",
     "# Recuperamos os embeddings de cada palavra\n",
-    "t_word_features = tf.gather_nd(t_W_tok, t_x_words)\n",
+    "t_word_features = tf.gather_nd(t_W_tok, t_x_words, name='word_features')\n",
     "\n",
-    "t_x_pos_flat = tf.reshape(t_x_pos,[-1])\n",
-    "t_pos_features = tf.one_hot(t_x_pos_flat, depth=n_pos)\n",
+    "t_x_pos_flat = tf.reshape(t_x_pos,[-1], name='gpos_flat')\n",
+    "t_pos_features = tf.one_hot(t_x_pos_flat, depth=n_pos, name='gpos_features')\n",
     "\n",
     "# t_x_type_flat = tf.reshape(t_x_type,[-1])\n",
     "# t_type_features = tf.one_hot(t_x_type_flat, depth=n_type)\n",
     "\n",
     "# t_tok_features = tf.concat((t_word_features,t_pos_features,t_type_features),axis=1)\n",
-    "t_tok_features = tf.concat((t_word_features,t_pos_features),axis=1)\n",
+    "t_tok_features = tf.concat((t_word_features,t_pos_features),axis=1, name='tok_features')\n",
     "\n",
     "# a partir das features do intervalo computamos o score\n",
-    "t_scores = tf.matmul(t_tok_features, t_W_interval) + t_b_interval\n",
+    "t_scores = tf.matmul(t_tok_features, t_W_interval, name='xW') + t_b_interval\n",
     "\n",
-    "t_pred = tf.argmax(t_scores, axis=1)"
+    "t_pred = tf.argmax(t_scores, axis=1, name='t_pred')"
    ]
   },
   {
@@ -1135,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1179,7 @@
    "source": [
     "propid  = 1\n",
     "words, gpos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1, proplen_dict, propid)\n",
-    "y = get_outputs(prop_dict1, lex2idx['T'], propid)\n",
+    "y = get_outputs(prop_dict1, lex2idx['T'], proplen_dict, propid)\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
@@ -1162,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -1178,21 +1208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# índices dos intervalos computados pelo Weighted Interval Scheduling\n",
-    "t_p = tf.placeholder(tf.int32, shape=(None,))\n",
+    "t_p = tf.placeholder(tf.int32, shape=(None,), name='predictions')\n",
     "# índices dos intervalos corretos\n",
-    "t_y = tf.placeholder(tf.int32, shape=(None,))\n",
-    "\n",
-    "t_indices = tf.to_int32(tf.range(tf.shape(t_x_words)[0]))\n",
+    "t_y = tf.placeholder(tf.int32, shape=(None,), name='y')\n",
+    "t_len = tf.placeholder(tf.int32, shape=(), name='proplen')\n",
+    "t_indices = tf.to_int32(tf.range(t_len), name='indices')\n",
     "\n",
     "# score da estrutura predita\n",
-    "t_scores_p = tf.gather_nd(t_scores, tf.stack((t_indices, t_p),-1))\n",
+    "t_scores_p = tf.gather_nd(t_scores, tf.stack((t_indices, t_p),-1), name='predicted_score')\n",
     "# score da estrutura correta\n",
-    "t_scores_y = tf.gather_nd(t_scores, tf.stack((t_indices,t_y),-1))\n",
+    "t_scores_y = tf.gather_nd(t_scores, tf.stack((t_indices,t_y),-1), name='target_score')\n",
     "\n",
     "# função de custo do perceptron estruturado\n",
     "t_cost = tf.reduce_sum(t_scores_p) - tf.reduce_sum(t_scores_y)\n",
@@ -1204,21 +1234,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(33,)\n",
+      "33\n"
+     ]
+    }
+   ],
    "source": [
     "# x_words, x_pos, x_types = get_input_features(df_chunk,train_sentences[10],word_to_id, pos_to_id, type_to_id)\n",
     "# y_ck_ids = get_output_features(df_chunk, train_sentences[10], target_to_id)\n",
     "\n",
     "prop_id = 1\n",
     "words, gpos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1, proplen_dict, propid)\n",
-    "y = get_outputs(prop_dict1, lex2idx['T'], propid)\n",
+    "y = get_outputs(prop_dict1, lex2idx['T'], proplen_dict, propid)\n",
     "\n",
     "sess = tf.Session()\n",
-    "sess.run(tf.global_variables_initializer())"
+    "sess.run(tf.global_variables_initializer())\n",
+    "predictions = pred(sess, words, gpos)\n",
+    "print(y.shape)\n",
+    "print(len(predictions))"
    ]
   },
   {
@@ -1230,18 +1270,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x_words' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-f48357f07674>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_words\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_pos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'x_words' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0606060606061   0.0\n",
+      "1.0   0.0\n"
      ]
     }
    ],
@@ -1255,15 +1292,169 @@
     "        t_x_words: words,\n",
     "        t_x_pos: gpos,\n",
     "        t_p: predictions,\n",
+    "        t_len: proplen_dict[propid],\n",
     "        t_y:y})\n",
     "\n",
     "\n",
     "    if i % 100 == 0:\n",
     "        err = np.sum(y.flatten() != predictions.flatten())\n",
-    "        acc = 1 - err/len(r.flatten())\n",
+    "        acc = 1 - err/len(predictions.flatten())\n",
     "        print(acc, ' ', cost)\n",
     "        if acc == 1:\n",
     "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## The model reproduces the sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  1  1 35  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2\n",
+      "  2  2  2  2  2  2  2  0]\n",
+      "\n",
+      "[ 0  1  1  1 35  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2\n",
+      "  2  2  2  2  2  2  2  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = sess.run(t_pred, feed_dict={t_x_words:words, t_x_pos:gpos})\n",
+    "print(p)\n",
+    "print()\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:08<00:00, 624.21it/s]\n",
+      "  1%|          | 59/5099 [00:00<00:08, 589.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  0  acc:  0.325484305983\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:08<00:00, 633.06it/s]\n",
+      "  1%|          | 57/5099 [00:00<00:08, 565.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  1  acc:  0.334956434668\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 638.20it/s]\n",
+      "  1%|▏         | 65/5099 [00:00<00:07, 642.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  2  acc:  0.33639380799\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:08<00:00, 634.40it/s]\n",
+      "  1%|▏         | 65/5099 [00:00<00:07, 642.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  3  acc:  0.339147427667\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:08<00:00, 627.30it/s]\n",
+      "  1%|          | 57/5099 [00:00<00:08, 564.36it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  4  acc:  0.342506682171\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|█████████▌| 4878/5099 [00:07<00:00, 615.61it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "sess= tf.Session()\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "epochs = 30\n",
+    "for i in range(epochs):\n",
+    "    total_err = 0\n",
+    "    total_size = 0\n",
+    "    nprops = len(proplen_dict)\n",
+    "    for propid in tqdm.tqdm(range(1, nprops + 1)):\n",
+    "        words, gpos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1, proplen_dict, propid)\n",
+    "        y = get_outputs(prop_dict1, lex2idx['T'], proplen_dict, propid)\n",
+    "\n",
+    "        predictions = pred(sess, words, gpos)\n",
+    "\n",
+    "        _, cost = sess.run([train, t_cost], feed_dict={\n",
+    "            t_x_words:words,\n",
+    "            t_x_pos:gpos,\n",
+    "            t_p:predictions,\n",
+    "            t_len: proplen_dict[propid],\n",
+    "            t_y:y})\n",
+    "        total_err += np.sum(predictions.flatten()!=y.flatten())\n",
+    "        total_size += len(predictions.flatten())\n",
+    "\n",
+    "    print('epoch ', i, ' acc: ', 1 - total_err/total_size)"
    ]
   },
   {
